--- a/hw3/Задание_3_Численное_Интегрирование.ipynb
+++ b/hw3/Задание_3_Численное_Интегрирование.ipynb
@@ -445,7 +445,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-02-07T12:13:03.221561Z",
@@ -479,14 +488,14 @@
     "    x1, x2, w1, w2 : float\n",
     "       Nodes and weights of the quadrature.\n",
     "    \"\"\"\n",
-    "    x1, x2 = None, None\n",
-    "    w1, w2 = 1/6, 2/3\n",
-    "    return "
+    "    x1, x2 = (a + b) / 2 - (b - a) / (2 * np.sqrt(3)), (a + b) / 2 + (b - a) / (2 * np.sqrt(3)) \n",
+    "    w1, w2 = (b - a) / 2, (b - a) / 2\n",
+    "    return x1, x2, w1, w2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-02-07T12:13:03.739216Z",
@@ -507,20 +516,7 @@
      "task": false
     }
    },
-   "outputs": [
-    {
-     "ename": "NotImplementedError",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNotImplementedError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [2], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mtesting\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m assert_allclose\n\u001b[0;32m----> 3\u001b[0m x1, x2, w1, w2 \u001b[38;5;241m=\u001b[39m \u001b[43mgauss_2\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mf\u001b[39m(x, n): \n\u001b[1;32m      6\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m x\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mn\n",
-      "Cell \u001b[0;32mIn [1], line 15\u001b[0m, in \u001b[0;36mgauss_2\u001b[0;34m(a, b)\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;124mr\u001b[39m\u001b[38;5;124;03m\"\"\"Return nodes and weights for a two-point Gauss quadrature on [a, b].\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;124;03m\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;124;03mParameters\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[38;5;124;03m   Nodes and weights of the quadrature.\u001b[39;00m\n\u001b[1;32m     13\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m     14\u001b[0m \u001b[38;5;66;03m# YOUR CODE HERE\u001b[39;00m\n\u001b[0;32m---> 15\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mNotImplementedError\u001b[39;00m()\n",
-      "\u001b[0;31mNotImplementedError\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from numpy.testing import assert_allclose\n",
     "\n",
@@ -951,7 +947,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
