--- a/hw3/Задание_3_Численное_Интегрирование.ipynb
+++ b/hw3/Задание_3_Численное_Интегрирование.ipynb
@@ -445,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-02-07T12:13:03.221561Z",
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-02-07T12:13:03.739216Z",
@@ -602,8 +602,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__Решение__\n",
+    "\n",
+    "Имеем особенности в двух точках - нуле и единице. <<Избавиться>> от особенности в единице можно так:\n",
+    "\n",
+    "\n",
+    "Требуется численно найти значение интеграла\n",
+    "$$\n",
+    "I_{1} = \\int_{0}^{1}\\frac{e^x + x \\cdot(e - 1) - 1}{\\sqrt{x(1-x)}}dx  = I + \\pi + \\frac{(e-1)*\\pi}{2}\n",
+    "$$"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-02-07T12:13:03.741268Z",
@@ -639,13 +664,84 @@
     "    I : float\n",
     "       The computed value of the integral\n",
     "    \"\"\"\n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()"
+    "    h = 1 / npts\n",
+    "    x = np.linspace(0, 1, npts)\n",
+    "    nomirator = np.exp(x) - (np.exp(1) - 1) * x - 1\n",
+    "    denominator = np.sqrt(x * (1 - x))\n",
+    "    f = np.divide(nomirator, denominator)\n",
+    "    f[np.isnan(f)] = 0\n",
+    "    return 0.5 * h * (f[0] + 2 * sum(f[1:-1]) + f[-1]) + np.pi + (np.exp(1) - 1) * np.pi / 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_24715/2240465234.py:20: RuntimeWarning: invalid value encountered in divide\n",
+      "  f = np.divide(nomirator, denominator)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Число точек      20, Значение 5.5291235, Ошибка Рунге 0.1038466\n",
+      "Число точек      40, Значение 5.5181630, Ошибка Рунге 0.0036535\n",
+      "Число точек      80, Значение 5.5130846, Ошибка Рунге 0.0016928\n",
+      "Число точек     160, Значение 5.5106832, Ошибка Рунге 0.0008005\n",
+      "Число точек     320, Значение 5.5095305, Ошибка Рунге 0.0003842\n",
+      "Число точек     640, Значение 5.5089710, Ошибка Рунге 0.0001865\n",
+      "Число точек    1280, Значение 5.5086971, Ошибка Рунге 0.0000913\n",
+      "Число точек    2560, Значение 5.5085623, Ошибка Рунге 0.0000449\n",
+      "Число точек    5120, Значение 5.5084956, Ошибка Рунге 0.0000222\n",
+      "Число точек   10240, Значение 5.5084626, Ошибка Рунге 0.0000110\n",
+      "Число точек   20480, Значение 5.5084461, Ошибка Рунге 0.0000055\n",
+      "Число точек   40960, Значение 5.5084379, Ошибка Рунге 0.0000027\n",
+      "Число точек   81920, Значение 5.5084338, Ошибка Рунге 0.0000014\n",
+      "Число точек  163840, Значение 5.5084318, Ошибка Рунге 0.0000007\n",
+      "Число точек  327680, Значение 5.5084308, Ошибка Рунге 0.0000003\n",
+      "Число точек  655360, Значение 5.5084303, Ошибка Рунге 0.0000002\n",
+      "Число точек 1310720, Значение 5.5084300, Ошибка Рунге 0.0000001\n"
+     ]
+    }
+   ],
+   "source": [
+    "nums = 20\n",
+    "error = 1e6\n",
+    "prev_value = np.pi + (np.exp(1) - 1) * np.pi / 2\n",
+    "while error > 1e-7:\n",
+    "    value = integ(nums)\n",
+    "    error = np.abs((value - prev_value) / 3)\n",
+    "    prev_value = value\n",
+    "    print(f\"Число точек {nums:7d}, Значение {value:.7f}, Ошибка Рунге {error:.7f}\")\n",
+    "    nums*=2\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Итог: 5.5084300\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Итог: {value:.7f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-02-07T12:13:03.742517Z",
@@ -672,13 +768,6 @@
     "# this is a test to check your computed value\n",
     "from numpy.testing import assert_allclose\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "fzBjg5i0CSRB"
-   },
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -882,6 +971,122 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from scipy import interpolate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "k:   10, value comp: 0.030154, error 0.0645775, error 68.2 %, it  12\n",
+      "k:   10, value comp: -0.173072, error 0.2678031, error 282.7 %, it  15\n",
+      "______________________________\n",
+      "k:   15, value comp: 0.022040, error 0.0472002, error 68.2 %, it  12\n",
+      "k:   15, value comp: 0.157349, error 0.0881092, error 127.3 %, it  15\n",
+      "______________________________\n",
+      "k:   20, value comp: 0.015190, error 0.0325304, error 68.2 %, it  11\n",
+      "k:   20, value comp: -0.086536, error 0.1342558, error 281.3 %, it  14\n",
+      "______________________________\n",
+      "k:   25, value comp: 0.013261, error 0.0284006, error 68.2 %, it  11\n",
+      "k:   25, value comp: 0.094591, error 0.0529293, error 127.0 %, it  14\n",
+      "______________________________\n",
+      "k:   30, value comp: 0.010140, error 0.0217170, error 68.2 %, it  11\n",
+      "k:   30, value comp: -0.057690, error 0.0895480, error 281.1 %, it  13\n",
+      "______________________________\n",
+      "k:   35, value comp: 0.009480, error 0.0203020, error 68.2 %, it  11\n",
+      "k:   35, value comp: 0.067601, error 0.0378191, error 127.0 %, it  14\n",
+      "______________________________\n",
+      "k:   40, value comp: 0.007609, error 0.0162958, error 68.2 %, it  10\n",
+      "k:   40, value comp: -0.043268, error 0.0671726, error 281.0 %, it  13\n",
+      "______________________________\n",
+      "k:   45, value comp: 0.007375, error 0.0157956, error 68.2 %, it  10\n",
+      "k:   45, value comp: 0.052590, error 0.0294188, error 127.0 %, it  13\n",
+      "______________________________\n",
+      "k:   50, value comp: 0.006089, error 0.0130395, error 68.2 %, it  10\n",
+      "k:   50, value comp: -0.034614, error 0.0537424, error 281.0 %, it  13\n",
+      "______________________________\n",
+      "k:   55, value comp: 0.006035, error 0.0129258, error 68.2 %, it  10\n",
+      "k:   55, value comp: 0.043033, error 0.0240716, error 127.0 %, it  13\n",
+      "______________________________\n",
+      "k:   60, value comp: 0.005074, error 0.0108676, error 68.2 %, it  10\n",
+      "k:   60, value comp: -0.028845, error 0.0447872, error 280.9 %, it  12\n",
+      "______________________________\n",
+      "k:   65, value comp: 0.005107, error 0.0109383, error 68.2 %, it  10\n",
+      "k:   65, value comp: 0.036415, error 0.0203690, error 126.9 %, it  13\n",
+      "______________________________\n",
+      "k:   70, value comp: 0.004350, error 0.0093158, error 68.2 %, it  10\n",
+      "k:   70, value comp: -0.024724, error 0.0383900, error 280.9 %, it  12\n",
+      "______________________________\n",
+      "k:   75, value comp: 0.004427, error 0.0094804, error 68.2 %, it  10\n",
+      "k:   75, value comp: 0.031561, error 0.0176536, error 126.9 %, it  13\n",
+      "______________________________\n",
+      "k:   80, value comp: 0.003806, error 0.0081518, error 68.2 %, it   9\n",
+      "k:   80, value comp: -0.021634, error 0.0335918, error 280.9 %, it  12\n",
+      "______________________________\n",
+      "k:   85, value comp: 0.003906, error 0.0083654, error 68.2 %, it   9\n",
+      "k:   85, value comp: 0.027848, error 0.0155769, error 126.9 %, it  12\n",
+      "______________________________\n",
+      "k:   90, value comp: 0.003383, error 0.0072463, error 68.2 %, it   9\n",
+      "k:   90, value comp: -0.019230, error 0.0298598, error 280.9 %, it  12\n",
+      "______________________________\n",
+      "k:   95, value comp: 0.003495, error 0.0074851, error 68.2 %, it   9\n",
+      "k:   95, value comp: 0.024917, error 0.0139374, error 126.9 %, it  12\n",
+      "______________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "def simpson(f, h):\n",
+    "    assert (len(f)-1) % 2 == 0\n",
+    "    return h/3. * (f[0] + 4 * sum(f[1:-1:2]) + \\\n",
+    "                   2 * sum(f[2:-2:2]) + f[-1])\n",
+    "\n",
+    "def integrate(f, err = 1e-8):\n",
+    "    error = np.inf\n",
+    "    nums =  101\n",
+    "    prev_value = 2\n",
+    "    iterations_num = 0\n",
+    "    while error > err:\n",
+    "        x = np.linspace(0, np.pi, nums, endpoint = True)\n",
+    "        f_n = f(x) \n",
+    "        h = 1/nums\n",
+    "        value = simpson(f_n, h)\n",
+    "        error  = np.abs(value - prev_value) / 15\n",
+    "        nums = nums * 2 + 1\n",
+    "        iterations_num += 1\n",
+    "        prev_value = value\n",
+    "    return value, iterations_num\n",
+    "\n",
+    "\n",
+    "k_values = np.arange(10, 100, 5)\n",
+    "f_f = lambda x, k: np.exp(-x)*np.sin(k*x)\n",
+    "for k in k_values:\n",
+    "    f = lambda x: f_f(x, k)\n",
+    "    val, it = integrate(f)\n",
+    "    real_val = k / (k**2 + 1) - (np.exp(-np.pi) * (k * np.cos(k * np.pi) + np.sin(k * np.pi))) / (1 + k**2)\n",
+    "    interpolation = interpolate.lagrange([0, 0.5, 1], [1, np.exp(-np.pi/2), np.exp(-np.pi)])\n",
+    "    f2 = lambda x: interpolation(x) * np.sin(k * x)\n",
+    "    val_int, it2 = integrate(f2)\n",
+    "    percent_error = np.abs(val - real_val) * 100/ real_val\n",
+    "    percent_error2 = np.abs(val_int - real_val) * 100/ real_val\n",
+    "    print(f\"k: {k:4d}, value comp: {val:.6f}, error {np.abs(real_val - val):.7f}, error {percent_error:.1f} %, it {it:3d}\")\n",
+    "    print(f\"k: {k:4d}, value comp: {val_int:.6f}, error {np.abs(real_val - val_int):.7f}, error {percent_error2:.1f} %, it {it2:3d}\")\n",
+    "    print(f\"___\"*10)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "id": "wJJ30uXQXjRm"
@@ -904,13 +1109,6 @@
     "\n",
     "используя соответствующий базис ортогональных полиномов. Найдите степень полинома (количество узлов), при которой точность превысит ошибку плавающей точки. Можете пользоваться вольфрамом или sympy."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
