--- a/hw4/Семинар 4 - пределы и ряды v0.1.ipynb
+++ b/hw4/Семинар 4 - пределы и ряды v0.1.ipynb
@@ -568,6 +568,34 @@
     "\n",
     "Поиграться с выбором шага."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Задача 1\n",
+    "\n",
+    "Рассчитать с машинной точностью интеграл с неопределенностью $\\int_{-1}^1 d x \\sin (x / 2) /\\left(e^x-1\\right)$ квадратурой на разностных схемах."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "func = lambda x: np.sin(x / 2) / (np.exp(x) - 1)\n"
+   ]
   }
  ],
  "metadata": {
@@ -588,7 +616,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.12.2"
   },
   "livereveal": {
    "theme": "beige",
